--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "garylocke/odbc-driver",
+    "name": "arturishe21/odbc-driver",
     "description": "Laravel 5.1 ODBC Driver",
     "keywords": ["odbc", "driver", "laravel", "5.1"],
     "authors": [
